sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:10: error: not found: value estPlusPetit
      if (estPlusPetit(i+ecart, i)) echange (i, i+ecart); echange=true
          ^AlgCombSort:10: error: Boolean does not take parameters
      if (estPlusPetit(i+ecart, i)) echange (i, i+ecart); echange=true
                                            ^